test/negative/send_sync_str_capture/compile.hxml
-cp .
-lib reflaxe.rust
-D rust_no_build
-D rust_send_sync_strict
-D rust_output=out
-main Main
